--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -21,10 +21,11 @@ author_profile: true
 
       {% capture written_label %}{{ label }}{% endcapture %}
     {% endif %}
-  {% endunless %}
-  {% for post in collection.docs %}
-    {% unless collection.output == false or collection.label == "posts" %}
-      {% include archive-single.html %}
     {% endunless %}
-  {% endfor %}
+    {% for post in collection.docs %}
+    {% unless collection.output == false or collection.label == "posts" %}
+    {% include archive-single.html %}
+    <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+    {% endunless %}
+    {% endfor %}
 {% endfor %}
