190518 - 테스트 파일들 삭제 - 케팔로니아 배고픈 신들 퀘스트 관련 내용 추가(이미지 파일, 본문) - _post, _potpolio 적용 안되게 파일명 변경 - 콜렉션 설정 수정

--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 #title: "Posts by Collection"
-permalink: /collection-archive/
+permalink: /collection/
 author_profile: true
 ---
 
@@ -21,11 +21,11 @@ author_profile: true
 
       {% capture written_label %}{{ label }}{% endcapture %}
     {% endif %}
-    {% endunless %}
-    {% for post in collection.docs %}
+  {% endunless %}
+  {% for post in collection.docs %}
     {% unless collection.output == false or collection.label == "posts" %}
-    {% include archive-single.html %}
-    <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
+      {% include archive-single.html %}
     {% endunless %}
-    {% endfor %}
+  {% endfor %}
 {% endfor %}
+    <a href="#page-title" class="back-to-top">{{ site.data.ui-text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
