--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 layout: home
 author_profile: true
 ---
+<link rel="alternate" type="application/rss+xml"  href="{{ site.url }}/feed.xml" title="{{ site.title }}">
